# Hybrid-Adaptive-BCI

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  requirements-ros2.txt  requirements.txt
adaptive_ai/: adaptive_threshold.csv  adaptive_update_status.csv  online_learning_status.csv  user_feedback.csv
csp/: csp_dataset.csv  csp_dataset_with_labels.csv  csp_features.csv  csp_model_train.pkl
deep_learning/: cnn_classifier.keras  cnn_history.pkl  cnn_lstm_best.keras  cnn_lstm_classifier.keras  cnn_lstm_history.pkl  lstm_classifier.keras  lstm_history.pkl
dl_data/: X_test.npy  X_train.npy  label_encoder.pkl  y_test.npy  y_train.npy
docs/: ARCHITECTURE.md  Lab01.md  Lab02.md  Lab03.md  Lab04.md  Lab05.md  Lab06.md  Lab07_01_ICA_Training.md  Lab07_02_ICA_Components_Visualization.md  Lab07_03_Manual_Component_Selection.md  Lab07_04_Automatic_Artifact_Detection.md  Lab07_05_Manual_Artifact_Removal.md  Lab07_06_Automatic_Artifact_Removal.md  Lab07_07_Before_After_Comparison.md  Lab08_01_Event_Extraction.md  Lab08_02_Epoch_Creation.md  Lab08_03_Baseline_Correction.md  Lab08_04_Epoch_Visualization.md  Lab08_05_Epoch_Quality_Check.md  Lab08_06_Save_Processed_Epochs.md  Lab08_07_Epoch_Summary_Report.md  Lab09_01_Time_Domain_Features.md  Lab09_02_Frequency_Domain_Features.md  Lab09_03_Power_Spectral_Density.md  Lab09_04_Band_Power_Extraction.md  Lab09_05_Statistical_Features.md  Lab09_06_Feature_Selection.md  Lab09_07_Feature_Summary_Report.md  Lab10_01_CSP_Theory.md  Lab10_02_Train_CSP.md  Lab10_03_Transform_EEG_Signals.md  Lab10_04_CSP_Feature_Analysis.md  Lab10_05_Save_CSP_Features.md  Lab10_06_CSP_Report.md  Lab11_01_Dataset_Preparation.md  Lab11_03_Train_Test_Split.md  Lab11_04_SVM_Classifier.md  Lab11_05_Random_Forest.md  Lab11_06_XGBoost_Classifier.md  Lab11_07_Model_Comparison.md  (+25 more)
features/: band_power_features.csv  final_feature_matrix.csv  frequency_domain_features.csv  psd_features.csv  statistical_features.csv  time_domain_features.csv
final_model/: final_bci_model.pkl  model_information.pkl
labs/: lab01_setup.py  lab02_load_eeg.py  lab03_read_edf.py  lab04_plot_raw.py  lab05_dataset_info.py  lab06_filter_eeg.py  lab07_03_manual_component_selection.py  lab07_04_auto_component_detection.py  lab07_05_artifact_removal.py  lab07_06_auto_artifact_removal.py  lab07_07_before_after_comparison.py  lab07_ica_fit.py  lab07_plot_ica.py  lab08_01_event_extraction.py  lab08_02_epoch_creation.py  lab08_03_baseline_correction.py  lab08_04_epoch_visualization.py  lab08_05_epoch_quality_check.py  lab08_06_save_processed_epochs.py  lab08_07_epoch_summary_report.py  lab09_01_time_domain_features.py  lab09_02_frequency_domain_features.py  lab09_03_power_spectral_density.py  lab09_04_band_power_extraction.py  lab09_05_statistical_features.py  lab09_06_feature_selection.py  lab09_07_feature_summary_report.py  lab10_01_csp_theory.py  lab10_02_train_csp.py  lab10_03_transform_eeg_signals.py  lab10_04_csp_feature_analysis.py  lab10_05_save_csp_features.py  lab10_06_csp_report.py  lab11_01_dataset_preparation.py  lab11_02_create_labels.py  lab11_03_train_test_split.py  lab11_04_svm_classifier.py  lab11_05_random_forest.py  lab11_06_xgboost_classifier.py  lab11_07_model_comparison.py  (+23 more)
ml_data/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
models/: csp_model.pkl  random_forest_classifier.pkl  svm_classifier.pkl  xgboost_classifier.pkl
papers/: README.md
processed_data/: subject01_run04-epo.fif
results/: lab05_dataset_info.txt  lab06_filter_report.txt  lab07_03_manual_component_selection_report.txt  lab07_04_auto_component_detection_report.txt  lab07_05_artifact_removal_report.txt  lab07_06_auto_artifact_removal_report.txt  lab07_07_before_after_comparison_report.txt  lab07_ica_components_report.txt  lab08_01_event_extraction_report.txt  lab08_02_epoch_creation_report.txt  lab08_03_baseline_correction_report.txt  lab08_04_epoch_visualization_report.txt  lab08_05_epoch_quality_check_report.txt  lab08_06_save_processed_epochs_report.txt  lab08_07_epoch_summary_report.txt  lab09_03_psd_report.txt  (+38 more)
ros2_workspace/src/bci_bridge/: package.xml  setup.cfg  setup.py
ros2_workspace/src/bci_bridge/bci_bridge/: __init__.py  bridge_node.py  prediction_source.py
ros2_workspace/src/bci_bridge/config/: bridge_params.yaml
ros2_workspace/src/bci_bridge/test/: test_prediction_source.py
ros2_workspace/src/bci_bringup/: package.xml  setup.cfg  setup.py
ros2_workspace/src/bci_bringup/bci_bringup/: __init__.py  scaling.py  trajectory_adapter.py
ros2_workspace/src/bci_bringup/config/: demo_predictions.csv  demo_threshold.csv
ros2_workspace/src/bci_bringup/launch/: bci_system.launch.py
ros2_workspace/src/bci_bringup/test/: test_trajectory_adapter.py
ros2_workspace/src/bci_hand_description/: CMakeLists.txt  package.xml
ros2_workspace/src/bci_hand_description/config/: hand_controllers.yaml
ros2_workspace/src/bci_hand_description/launch/: gazebo.launch.py
ros2_workspace/src/bci_hand_description/test/: test_hand_description.py
ros2_workspace/src/bci_hand_description/urdf/: bci_hand.urdf.xacro
ros2_workspace/src/bci_hand_moveit_config/: CMakeLists.txt  package.xml
ros2_workspace/src/bci_hand_moveit_config/config/: .setup_assistant  bci_hand.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
ros2_workspace/src/bci_hand_moveit_config/launch/: demo.launch.py  move_group.launch.py
ros2_workspace/src/bci_hand_moveit_config/test/: test_named_states.py
ros2_workspace/src/bci_interfaces/: CMakeLists.txt  package.xml
ros2_workspace/src/bci_interfaces/msg/: BCICommand.msg  RobotState.msg
ros2_workspace/src/bci_interfaces/srv/: ExecuteGesture.srv
ros2_workspace/src/bci_robot_abstraction/: package.xml  setup.cfg  setup.py
ros2_workspace/src/bci_robot_abstraction/bci_robot_abstraction/: __init__.py  gesture_library.py  metrics.py  robot_interface.py  robot_node.py  robot_registry.py  robotic_hand_interface.py
ros2_workspace/src/bci_robot_abstraction/test/: test_abstraction.py
(+21 files in other folders)
