<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bci_bridge</name>
  <version>1.0.0</version>
  <description>
    Bridge from the EEG/AI real-time pipeline to ROS2. Reads the existing
    prediction and adaptive-threshold outputs and publishes robot-independent
    BCICommand messages. The AI pipeline (Labs 01-14) is not modified.
  </description>
  <maintainer email="alexlavander7@gmail.com">Mohamed Abdelsalam</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>bci_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
