<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bci_bringup</name>
  <version>1.0.0</version>
  <description>
    Top-level bringup for the Hybrid Adaptive BCI. Launches the full pipeline
    (EEG/AI predictions -> bridge -> abstraction -> hand adapter -> Gazebo
    hand) and provides the hand-specific trajectory adapter.
  </description>
  <maintainer email="alexlavander7@gmail.com">Mohamed Abdelsalam</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>bci_interfaces</exec_depend>
  <exec_depend>bci_robot_abstraction</exec_depend>
  <exec_depend>bci_bridge</exec_depend>
  <exec_depend>bci_hand_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
