cmake_minimum_required(VERSION 3.8)
project(bci_hand_moveit_config)

find_package(ament_cmake REQUIRED)

install(
  DIRECTORY config launch
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_cmake_pytest REQUIRED)
  ament_add_pytest_test(test_named_states test/test_named_states.py)
endif()

ament_package()
