<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bci_interfaces</name>
  <version>1.0.0</version>
  <description>
    Message and service interfaces for the Hybrid Adaptive BCI robot control
    system. Defines robot-independent semantic gesture commands shared by the
    EEG/AI bridge and the robot abstraction layer, so new robots can be added
    without changing the EEG or AI pipeline.
  </description>
  <maintainer email="alexlavander7@gmail.com">Mohamed Abdelsalam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
