<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bci_robot_abstraction</name>
  <version>1.0.0</version>
  <description>
    Robot-independent abstraction layer for the Hybrid Adaptive BCI. Defines
    the RobotInterface contract and a registry so new robots (robotic hand,
    UR5e, Franka Panda, KUKA iiwa) are added without changing the EEG/AI code.
  </description>
  <maintainer email="alexlavander7@gmail.com">Mohamed Abdelsalam</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>bci_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
